add repository info to package.json
Signed-off-by: Kipras Melnikovas <kipras@kipras.org>

--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   },
   "peerDependencies": {
     "react": ">=16"
+  },
+  "repository": {
+  	"type": "git",
+	"url": "http://github.com/kiprasmel/react-selectable-items"
   }
 }
